# pipeline_mf_ETL

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: settings.yaml
mf_etl/: __init__.py
src/mf_etl/: __init__.py  cli.py  config.py  logging_utils.py
src/mf_etl/backtest/: __init__.py  adapters.py  candidate_rerun.py  candidate_rerun_models.py  candidate_rerun_reports.py  engine.py  execution_realism.py  execution_realism_calibration.py  execution_realism_calibration_models.py  execution_realism_models.py  execution_realism_report.py  hybrid_eval_report.py  metrics.py  models.py  pipeline.py  policy_overlay.py  policy_overlay_models.py  portfolio.py  production_candidates.py  production_candidates_models.py  production_candidates_reports.py  reports.py  sanity.py  sensitivity_aggregate.py  sensitivity_grid.py  sensitivity_models.py  sensitivity_reports.py  sensitivity_runner.py  sensitivity_sanity.py  signals.py  state_mapping.py  writer.py
src/mf_etl/bronze/: __init__.py  pipeline.py  sanity_checks.py  symbol_master.py  writer.py
src/mf_etl/gold/: __init__.py  event_grammar_v1.py  features_pipeline.py  features_v1.py  features_writer.py  pipeline.py  placeholders.py  writer.py
src/mf_etl/ingest/: __init__.py  discover.py  manifest.py  read_txt.py
src/mf_etl/research/: __init__.py  clustering.py  dataset_loader.py  forward_labels.py  pipeline.py  preprocess.py  profiles.py  sanity.py
src/mf_etl/research_hmm/: __init__.py  dataset_loader.py  decode.py  diagnostics.py  hmm_model.py  pipeline.py  preprocess.py  profiles.py  sanity.py  (+1 more)
(+44 files in other folders)
