[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-etl"
version = "0.1.0"
description = "Production-style ETL skeleton for local daily stock data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "polars>=1.0.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
]

[project.scripts]
mf-etl = "mf_etl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
